analytics/terraform/s3-mount-spark-s3express/resources/s3_express_spark_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spark-s3-express
  name: order
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: order-ui-svc
              port:
                number: 4040
